# screenshot-sorter

./: README.md  app.py  contact.py  contact_ui.py  install.sh  pyproject.toml  sort_screenshots.py
docs/: index.html
example/sample-roll/: index.html  roll.yaml  testroll_1.xmp  testroll_2.xmp  testroll_3.xmp  testroll_4.xmp  testroll_5.xmp  testroll_6.xmp  testroll_7.xmp  testroll_8.xmp  testroll_9.xmp
processor/: html.py  roll.py  sidecar.py  tagger.py
